# exchange_trade_data_api

./: README.md  pyproject.toml
etc/: config.ini
src/exchange_trade_data_api/: __init__.py  routes.py  scripts.py
src/exchange_trade_data_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/exchange_trade_data_api/handlers/: __init__.py  status.py  trades.py
src/exchange_trade_data_api/models/: __init__.py  trades.py
src/mongo/: catcher.py  model.py
