[tool.poetry]
name = "exchange_trade_data_api"
version = "0.1.0"
description = "A service to query data with cryptocurrency exchange trades"
authors = ["valeas90 <jonvaleas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
motor = "^2.1"
aiohttp = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
exchange_trade_data_api = "exchange_trade_data_api:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
